--- a/manifest.plist
+++ b/manifest.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://github.com/a7510774/IPA/blob/master/guatengwang.ipa</string>
+					<string>https://raw.githubusercontent.com/a7510774/IPA/master/guatengwang.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
